--- a/dashboard.html
+++ b/dashboard.html
@@ -307,49 +307,92 @@
       };
       firebase.initializeApp(firebaseConfig);
     </script>
-
-    <button class="hamburger" id="menu-btn" aria-label="Toggle Menu">
+    <style>
+      .btn-white-black {
+        background-color: white;
+        color: black;
+        border: 1px solid #ccc;
+        font-weight: bold;
+        border-radius: 6px;
+        padding: 6px 12px;
+        transition: background-color 0.3s, color 0.3s;
+        text-decoration: none;
+        display: inline-block;
+      }
+      .btn-white-black:hover {
+        background-color: #f0f0f0;
+        color: #000;
+      }
+    </style>
+    <div class="d-flex align-items-center">
+      <a href="login.html" id="loginLink" class="btn btn-sm btn-white-black me-3">Login</a>
+      <button id="logoutButton" class="btn btn-sm btn-white-black me-3" style="display: none;">Logout</button>
+      <a href="dashboard.html" id="dashboardLink" class="btn btn-sm btn-white-black" style="display: none;">Dashboard</a>
+    </div>
+    <button class="hamburger" id="hamburger">
       <div></div>
       <div></div>
       <div></div>
     </button>
 
-    <ul class="menu" id="menu">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="dashboard.html">Dashboard</a></li>
-      <li><a href="#" id="logout-link">Logout</a></li>
+     <ul class="menu" id="navMenu">
+      <li><a href="index.html">🏠 Home</a></li>
+      <li><a href="categories.html">📐 MCQ Categories</a></li>
+      <li><a href="manual-quizzes.html">📊 Manual Based MCQ</a></li>
+      <li><a href="pyq-quizzes.html">📄 PYQ Based MCQ</a></li>
+      <li><a href="establishment.html">🔄 Establishment MCQ</a></li>
+      <li><a href="current-affairs.html">🌐 Current Affairs</a></li>
+      <li><a href="gk.html">💡 General Knowledge</a></li>
+      <li><a href="dashboard.html" id="mobileDashboardLink" style="display: none;">📊 Dashboard</a></li>
+      <li><a href="contact.html">📧 Contact Us</a></li>
     </ul>
   </nav>
 </header>
 
-<main class="container py-4">
+<main class="dashboard-container container py-4">
+  <div id="error-message" class="alert alert-danger text-center d-none">
+    You are not logged in. <a href="login.html">Go to login</a>
+  </div>
 
   <section class="profile-section flex-container">
-    <img src="images/avatar1.png" alt="Avatar" width="40" height="40" class="me-3" />
-    <h2 id="userName"></h2>
+    <div class="avatar-container text-center">
+      <div class="mb-2">
+         <img id="userAvatar" src="default-avatar.png" alt="Profile Picture" class="rounded-circle" width="100" height="100" />
+      </div>
+    <div class="profile-info">
+        <h2>Welcome, <span id="dashboard-username">User</span>!</h2>
+      <p>Email: <span id="account-email">user@example.com</span></p>
+      </div>
+    </div>
     <button class="change-password-btn" id="openChangePassword">Change Password</button>
-    <a href="quiz-history.html" class="history-btn">History</a>
+    <a href="quiz-history.html" class="manual-btn history-btn">Quiz History</a>
   </section>
 
-  <section class="content">
-    <h2>Your Quizzes</h2>
-    <div id="quizList" class="quiz-list"></div>
+  <section class="dashboard-section" id="quiz-section">
+    <div style="text-align: center;">
+      <h3 class="mb-3" style="font-size: 2rem;">Available Quizzes</h3>
+    </div>
+    <div class="quiz-list">
+      <button class="manual-btn" data-manual="irwm">1. Indian Railway Works Manual</button>
+      <button class="manual-btn" data-manual="irpwm">2. Indian Railway P-way Manual</button>
+      <button class="manual-btn" data-manual="irdim">3. Indian Railway Schedule of Dimensions</button>
+      <button class="manual-btn" data-manual="irec">4. Indian Railway Engineering Code</button>
+      <button class="manual-btn" data-manual="stm">5. Small Track Machine Manual</button>
+      <button class="manual-btn" data-manual="usfd">6. USFD Manual</button>
+      <button class="manual-btn" data-manual="fbwm">7. FBW Manual</button>
+      <button class="manual-btn" data-manual="store">8. Store Manual</button>
+      <button class="manual-btn" data-manual="account">9. Account Manual</button>
+      <button class="manual-btn" data-manual="pyq2022">10. PYQ 30% Main 2022</button>
+      <button class="manual-btn" data-manual="pyq2021">11. PYQ 30% Main 2021</button>
+    </div>
   </section>
-
-  <aside class="sidebar">
-    <h3>How to Use</h3>
-    <p>Welcome to the quiz dashboard! Here you can:</p>
-    <ul>
-      <li>View and start quizzes</li>
-      <li>Check your quiz history</li>
-      <li>Change your account password</li>
-    </ul>
-  </aside>
 
 </main>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script type="module" src="dashboard.js"></script>
 <footer>
-  &copy; 2025 IR-LDCE. All rights reserved.
+  &copy; 2025 IR-LDCE. All Rights Reserved.
 </footer>
 
 <!-- Change Password Modal -->
@@ -373,31 +416,40 @@
 </div>
 
 <script>
-  // Hamburger menu toggle
-  const menuBtn = document.getElementById('menu-btn');
-  const menu = document.getElementById('menu');
-  menuBtn.addEventListener('click', () => {
-    menu.classList.toggle('active');
+ // Toggle menu on hamburger click
+  document.getElementById('hamburger').addEventListener('click', function() {
+    document.getElementById('navMenu').classList.toggle('active');
   });
 
-  // Firebase auth logout
-  const logoutLink = document.getElementById('logout-link');
-  logoutLink.addEventListener('click', (e) => {
-    e.preventDefault();
-    firebase.auth().signOut().then(() => {
-      window.location.href = "index.html";
-    });
-  });
+   // Auth State Handling
+  const auth = firebase.auth();
+  const loginLink = document.getElementById("loginLink");
+  const logoutButton = document.getElementById("logoutButton");
+  const dashboardLink = document.getElementById("dashboardLink");
+  const mobileDashboardLink = document.getElementById("mobileDashboardLink");
 
-  // Show user info (example)
-  firebase.auth().onAuthStateChanged((user) => {
+  // Listen for auth state changes
+  auth.onAuthStateChanged((user) => {
     if (user) {
-      document.getElementById('userName').textContent = user.displayName || user.email;
-      // You can also load quizzes here or from external JS file
+      loginLink.style.display = "none";
+      logoutButton.style.display = "inline-block";
+      dashboardLink.style.display = "inline-block";
+      mobileDashboardLink.style.display = "inline";
     } else {
-      // Not logged in, redirect to login page
-      window.location.href = "index.html";
+      loginLink.style.display = "inline";
+      logoutButton.style.display = "none";
+      dashboardLink.style.display = "none";
+      mobileDashboardLink.style.display = "none";
     }
+  });
+
+  // Handle logout
+  logoutButton.addEventListener("click", () => {
+    auth.signOut().then(() => {
+      console.log("User signed out");
+    }).catch((error) => {
+      console.error("Sign out error", error);
+    });
   });
 
   // Change Password Modal Logic
