--- a/quiz-history.html
+++ b/quiz-history.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Quiz History</title>
+  <title>IR-LDCE Quiz History</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -32,26 +32,42 @@
   text-decoration: none;
 }
 
-    ul.menu {
+  ul.menu {
       list-style: none;
-      display: flex;
-      gap: 20px;
+      display: none;
+      flex-direction: column;
+      position: absolute;
+      top: 60px;
+      right: 20px;
+      background: #004080;
+      border-radius: 5px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+      padding: 10px 0;
       margin: 0;
-      padding: 0;
+      z-index: 1000;
+    }
+    ul.menu.active {
+      display: flex;
     }
 
     ul.menu li a {
       color: white;
       text-decoration: none;
+      padding: 10px 20px;
+      display: block;
       font-weight: 500;
     }
-
+ ul.menu li a:hover {
+      background: rgba(255,255,255,0.1);
+    }
     .hamburger {
-      display: none;
+      display: flex;
       flex-direction: column;
       cursor: pointer;
+      background: none;
+      border: none;
+      padding: 0;
     }
-
     .hamburger div {
       width: 25px;
       height: 3px;
@@ -70,15 +86,6 @@
         width: 100%;
         padding: 10px 0;
       }
-
-      ul.menu.active {
-        display: flex;
-      }
-
-      .hamburger {
-        display: flex;
-      }
-    }
 
     /* Main Content */
     main {
@@ -130,23 +137,18 @@
       margin-bottom: 40px;
     }
 
-    .manual-btn {
+   .manual-btn {
       background-color: #1976d2;
       color: white;
       font-weight: bold;
-      padding: 18px 20px;
-      border-radius: 12px;
+      padding: 15px 20px;
+      border-radius: 8px;
       text-align: center;
-      min-width: 320px;
-      flex: 1 1 320px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.13);
+      min-width: 240px;
+      flex: 1 1 240px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
       cursor: pointer;
       border: none;
-      font-size: 1.15rem;
-      margin-bottom: 0;
-      margin-top: 0;
-      transition: background 0.2s, box-shadow 0.2s;
-      display: block;
     }
 
     .manual-btn:hover {
@@ -154,23 +156,21 @@
       box-shadow: 0 4px 16px rgba(0,0,0,0.18);
     }
 
-    .btn-white-black {
-      background-color: white;
-      color: black;
-      border: 1px solid #ccc;
-      font-weight: bold;
-      border-radius: 6px;
-      padding: 6px 12px;
-      transition: background-color 0.3s, color 0.3s;
-      text-decoration: none;
-      display: inline-block;
+.d-flex {
+      display: flex;
+      align-items: center;
     }
-
-    .btn-white-black:hover {
-      background-color: #f0f0f0;
-      color: #000;
+    .me-3 {
+      margin-right: 1rem;
     }
-
+    .btn-outline-primary {
+      background-color: transparent;
+      border: 2px solid #1976d2;
+      color: #1976d2;
+    }
+    .btn-outline-primary:hover {
+      background-color: #1976d2;
+      color: white;
     .alert {
       padding: 15px;
       margin-bottom: 20px;
@@ -271,36 +271,65 @@
   </style>
 </head>
 <body>
-  <!-- Firebase SDK v9 compat -->
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
 
   <header>
     <nav>
       <a href="index.html" class="logo">IR-LDCE</a>
+        <!-- Firebase SDK v9 compat -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+          <!-- Firebase Configuration -->
+    <script>
+      const firebaseConfig = {
+        apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
+        authDomain: "quiz-app-1b48b.firebaseapp.com",
+        projectId: "quiz-app-1b48b",
+        appId: "1:765334603137:web:1c8a13f6086a6773c2d480"
+      };
+      firebase.initializeApp(firebaseConfig);
+    </script>
+      <!-- UI Section -->
+    <style>
+      .btn-white-black {
+        background-color: white;
+        color: black;
+        border: 1px solid #ccc;
+        font-weight: bold;
+        border-radius: 6px;
+        padding: 6px 12px;
+        transition: background-color 0.3s, color 0.3s;
+        text-decoration: none;
+        display: inline-block;
+      }
+      .btn-white-black:hover {
+        background-color: #f0f0f0;
+        color: #000;
+      }
+    </style>
       <div class="d-flex align-items-center">
         <a href="login.html" id="loginLink" class="btn-white-black me-3">Login</a>
         <button id="logoutButton" class="btn-white-black" style="display: none;">Logout</button>
         <a href="dashboard.html" id="dashboardLink" class="btn btn-sm btn-white-black" style="display: none;">Dashboard</a>
       </div>
-      <div class="hamburger" onclick="toggleMenu()">
+      <button class="hamburger" id="hamburger">
         <div></div>
         <div></div>
         <div></div>
-      </div>
-      <ul class="menu" id="navMenu">
-        <li><a href="index.html">🏠 Home</a></li>
-        <li><a href="categories.html">📐 MCQ Categories</a></li>
-        <li><a href="manual-quizzes.html">📊 Manual Based MCQ</a></li>
-        <li><a href="pyq-quizzes.html">📄 PYQ Based MCQ</a></li>
-        <li><a href="establishment.html">🔄 Establishment MCQ</a></li>
-        <li><a href="current-affairs.html">🌐 Current Affairs</a></li>
-        <li><a href="gk.html">💡 General Knowledge</a></li>
-        <li><a href="contact.html">📧 Contact Us</a></li>
-      </ul>
-    </nav>
-  </header>
+    </button>
+    <ul class="menu" id="navMenu">
+      <li><a href="index.html">🏠 Home</a></li>
+      <li><a href="categories.html">📐 MCQ Categories</a></li>
+      <li><a href="manual-quizzes.html">📊 Manual Based MCQ</a></li>
+      <li><a href="establishment.html">🔄 Establishment MCQ</a></li>
+      <li><a href="current-affairs.html">🌐 Current Affairs</a></li>
+      <li><a href="gk.html">💡 General Knowledge</a></li>
+      <li><a href="dashboard.html" id="mobileDashboardLink" style="display: none;">📊 Dashboard</a></li>
+      <li><a href="contact.html">📧 Contact Us</a></li>
+    </ul>
+  </nav>
+</header>
 
 <main class="dashboard-container container py-4">
   <div id="error-message" class="alert alert-danger text-center d-none">
