--- a/dashboard.html
+++ b/dashboard.html
@@ -132,6 +132,26 @@
       background-color: #125ca4;
       box-shadow: 0 4px 16px rgba(0,0,0,0.18);
     }
+    @media (max-width: 768px) {
+  .profile-section.flex-container {
+    flex-direction: column;
+    align-items: stretch;
+  }
+
+  .profile-section .change-password-btn,
+  .profile-section .history-btn {
+    margin-left: 0 !important;
+    margin-top: 10px;
+    width: 100%;
+    max-width: 300px;
+    align-self: center;
+  }
+
+  .profile-section .avatar-container {
+    text-align: center;
+    width: 100%;
+  }
+}
     .profile-section.flex-container {
       display: flex;
       align-items: center;
