--- a/dashboard.html
+++ b/dashboard.html
@@ -385,7 +385,7 @@
       </div>
     </div>
     <button class="change-password-btn" id="openChangePassword">Change Password</button>
-    <a href="quiz-history.html" class="manual-btn history-btn">Quiz History</a>
+    <a href="quiz-history.html" class="history-btn">Quiz History</a>
   </section>
 
   <section class="dashboard-section" id="quiz-section">
