--- a/dashboard.html
+++ b/dashboard.html
@@ -161,7 +161,7 @@
       padding: 0 20px;
     }
     .history-btn {
-      background-color: #1976d2;
+      background-color: #125ca4;
       color: white;
       font-weight: bold;
       padding: 18px 20px;
