--- a/dashboard.html
+++ b/dashboard.html
@@ -173,11 +173,11 @@
       border: none;
       font-size: 1.15rem;
       transition: background 0.2s, box-shadow 0.2s;
-      text-decoration: none;
+      margin-left: 1rem;
       display: inline-block;
     }
     .history-btn:hover {
-      background-color: #125ca4;
+      background-color: #006666;
       box-shadow: 0 4px 16px rgba(0,0,0,0.18);
     }
     .change-password-btn {
