--- a/dashboard.html
+++ b/dashboard.html
@@ -161,7 +161,7 @@
       padding: 0 20px;
     }
     .history-btn {
-      background-color: #125ca4;
+      background-color: #008080;
       color: white;
       font-weight: bold;
       padding: 18px 20px;
@@ -174,6 +174,7 @@
       font-size: 1.15rem;
       transition: background 0.2s, box-shadow 0.2s;
       margin-left: 1rem;
+      text-decoration: none;
       display: inline-block;
     }
     .history-btn:hover {
