--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       };
       firebase.initializeApp(firebaseConfig);
     </script>
-    <div class="d-flex align-items-right">
+    <div class="d-flex align-items-center">
       <a href="login.html" id="loginLink" class="btn btn-sm btn-white-black me-3">Login</a>
       <button id="logoutButton" class="btn btn-sm btn-white-black me-3" style="display: none;">Logout</button>
       <a href="dashboard.html" id="dashboardLink" class="btn btn-sm btn-white-black" style="display: none;">Dashboard</a>
