--- a/quiz.html
+++ b/quiz.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Quiz App</title>
   <style>
     body {
@@ -17,7 +17,7 @@
       padding: 20px;
       background: white;
       border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
       display: none;
     }
     #loading {
@@ -157,14 +157,15 @@
 
   <div id="loading">Loading...</div>
   <div class="app">
-    <div id="quizTimer" style="display: none;"></div>
+    <div id="quizTimer"></div>
     <div id="quizIndexBar"></div>
+    <h1 style="text-align:center"></h1>
     <div id="question"></div>
     <div id="answer-buttons"></div>
-    <button id="next-btn" style="display: none;">Next</button>
-    <button id="skip-btn" style="display: none;">Skip</button>
-    <button id="mark-review-btn" style="display: none;">Mark for Review</button>
-    <button id="submit-btn" style="display: none;">Submit</button>
+    <button id="next-btn">Next</button>
+    <button id="skip-btn">Skip</button>
+    <button id="mark-review-btn">Mark for Review</button>
+    <button id="submit-btn" onclick="confirmSubmit()">Submit</button>
     <div id="result"></div>
   </div>
   <script src="script.js"></script>
