--- a/quiz.html
+++ b/quiz.html
@@ -179,7 +179,7 @@
     let score = 0;
     let quizDuration = 600; // Will be set dynamically
     let timerInterval;
-    let questionStatus = []; // "not", "attempted", "skipped"
+    let questionStatus = []; // "not", "attempted", "skipped", "review"
     let quizEnded = false;
 
     const questionElem = document.getElementById("question");
@@ -190,6 +190,7 @@
     const quizTimer = document.getElementById("quizTimer");
     const quizIndexBar = document.getElementById("quizIndexBar");
     const resultDiv = document.getElementById("result");
+    const markReviewBtn = document.getElementById("mark-review-btn"); // <-- Added
 
     async function initQuiz() {
       currentIndex = 0;
@@ -251,9 +252,7 @@
       if (quizEnded) return;
       const q = questions[currentIndex];
       const allBtns = answersDiv.querySelectorAll('button');
-      allBtns.forEach(btn => btn.disabled = true);
-
-      if (isCorrect) {
+      allBtns.forEach(btn => btn.disabled = true);... if (isCorrect) {
         score += 1;
         selectedBtn.classList.add('correct');
       } else {
@@ -284,6 +283,15 @@
       goToNext();
     });
 
+    // --- ADDED: Mark for Review event listener ---
+    markReviewBtn.addEventListener("click", () => {
+      if (quizEnded) return;
+      if (questionStatus[currentIndex] !== "attempted") {
+        questionStatus[currentIndex] = "review";
+        updateIndexBar();
+      }
+    });
+
     submitBtn.addEventListener("click", () => {
       if (quizEnded) return;
       endQuiz();
@@ -306,6 +314,7 @@
         if (idx === currentIndex) dot.classList.add('current');
         if (questionStatus[idx] === "attempted") dot.classList.add('attempted');
         else if (questionStatus[idx] === "skipped") dot.classList.add('skipped');
+        else if (questionStatus[idx] === "review") dot.classList.add('review');
         dot.textContent = idx + 1;
         dot.onclick = () => {
           if (!quizEnded) {
