--- a/quiz.html
+++ b/quiz.html
@@ -88,10 +88,7 @@
     .quiz-index-dot.skipped {
       background: #ffb6b6;
     }
-    .quiz-index-dot.review {
-      background: #ffe066;
-    }
-    #next-btn, #skip-btn, #submit-btn, #mark-review-btn {
+    #next-btn, #skip-btn, #submit-btn {
       padding: 10px 20px;
       margin: 5px;
       border: none;
@@ -110,10 +107,6 @@
     #submit-btn {
       background: #4caf50;
       color: white;
-    }
-    #mark-review-btn {
-      background: #ffc107;
-      color: black;
     }
     #result {
       font-size: 1.5rem;
@@ -163,12 +156,10 @@
   <div class="app">
     <div id="quizTimer" style="display: none;"></div>
     <div id="quizIndexBar"></div>
-    <h1 style="text-align:center"></h1>
     <div id="question"></div>
     <div id="answer-buttons"></div>
     <button id="next-btn" style="display: none;">Next</button>
     <button id="skip-btn" style="display: none;">Skip</button>
-    <button id="mark-review-btn">Mark for Review</button>
     <button id="submit-btn" style="display: none;">Submit</button>
     <div id="result"></div>
   </div>
@@ -381,17 +372,6 @@
         window.location.href = 'quiz-history.html';
       });
     }
-    // Add this line if you don't already have it (but you likely do)
-const markReviewBtn = document.getElementById("mark-review-btn");
-
-// Add this event listener after your other event listeners (next, skip, submit)
-markReviewBtn.addEventListener("click", () => {
-  if (quizEnded) return;
-  if (questionStatus[currentIndex] !== "attempted") {
-    questionStatus[currentIndex] = "review";
-    updateIndexBar();
-  }
-});
   </script>
 </body>
 </html>
