--- a/quiz.html
+++ b/quiz.html
@@ -172,6 +172,8 @@
     let timerInterval;
     let questionStatus = []; // "not", "attempted", "skipped"
     let quizEnded = false;
+    let isCorrectList = Array(questions.length).fill(null); // tracks if each answer was correct (true), incorrect (false), or not attempted (null)
+
 
     const questionElem = document.getElementById("question");
     const answersDiv = document.getElementById("answer-buttons");
@@ -258,19 +260,18 @@ function showQuestion() {
       if (isCorrect) {
         score += 1;
         selectedBtn.classList.add('correct');
+        isCorrectList[currentIndex] = true; // <-- Track correct answer
       } else {
         score -= 1 / 3;
         selectedBtn.classList.add('wrong');
+        isCorrectList[currentIndex] = false; // <-- Track incorrect answer
         allBtns.forEach(btn => {
           if (btn.textContent === q.answers.find(a => a.correct).text) {
             btn.classList.add('correct');
           }
         });
       }
-      function selectAnswer(selectedBtn, isCorrect) {
-  if (quizEnded || questionStatus[currentIndex] === "attempted") return;
-  // ... rest of your existing code ...
-}
+      
       questionStatus[currentIndex] = "attempted";
       nextBtn.style.display = 'inline-block';
       skipBtn.style.display = 'inline-block';
@@ -368,8 +369,23 @@ function showQuestion() {
         }
       }
 
+      const correctCount = isCorrectList.filter(v => v === true).length;
+      const incorrectCount = isCorrectList.filter(v => v === false).length;
+      
       quizDiv.innerHTML = `
         <div id="result">Your Score: ${score.toFixed(2)}</div>
+         <table style="margin: 20px auto; width: 80%; border-collapse: collapse; border: 1px solid #ccc;">
+    <tr>
+      <th style="padding: 10px; text-align: center; border: 1px solid #ccc;">No. of Questions</th>
+      <th style="padding: 10px; text-align: center; border: 1px solid #ccc;">Correctly Answered</th>
+      <th style="padding: 10px; text-align: center; border: 1px solid #ccc;">Incorrectly Answered</th>
+    </tr>
+    <tr>
+      <td style="padding: 10px; text-align: center; border: 1px solid #ccc;">${questions.length}</td>
+      <td style="padding: 10px; text-align: center; border: 1px solid #ccc;">${correctCount}</td>
+      <td style="padding: 10px; text-align: center; border: 1px solid #ccc;">${incorrectCount}</td>
+    </tr>
+  </table>
         <button id="home-btn" style="margin: 10px; padding: 10px 20px;">Home</button>
         <button id="dashboard-btn" style="margin: 10px; padding: 10px 20px;">Dashboard</button>
         <button id="history-btn" style="margin: 10px; padding: 10px 20px;">Attempt History</button>
