--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
       <div class="quiz-card">9. Account Manual</div>
       <div class="quiz-card">10. PYQ 30% Main 2022</div>
       <div class="quiz-card">11. PYQ 30% Main 2021</div>
+      <div class="quiz-card">11. PYQ 30% Main 2023</div>
     </div>
     <div class="card">
       <h3>Latest Questions</h3>
