--- a/pyq-quizzes.html
+++ b/pyq-quizzes.html
@@ -231,13 +231,10 @@
       <h3 class="mb-3" style="font-size: 2rem;">Available PYQ Based</h3>
     </div>
     <div class="quiz-list" id="pyqList">
-      <button class="manual-btn" data-manual="stm" aria-label="Start quiz for Small Track Machine Manual">5. Small Track Machine Manual</button>
-      <button class="manual-btn" data-manual="usfd" aria-label="Start quiz for USFD Manual">6. USFD Manual</button>
-      <button class="manual-btn" data-manual="fbwm" aria-label="Start quiz for FBW Manual">7. FBW Manual</button>
-      <button class="manual-btn" data-manual="store" aria-label="Start quiz for Store Manual">8. Store Manual</button>
-      <button class="manual-btn" data-manual="account" aria-label="Start quiz for Account Manual">9. Account Manual</button>
-      <button class="manual-btn" data-manual="pyq2022" aria-label="Start quiz for 2022 30% Main">10. PYQ 30% Main 2022</button>
-      <button class="manual-btn" data-manual="pyq2021" aria-label="Start quiz for 2021 30% Main">11. PYQ 30% Main 2021</button>
+     
+      <button class="manual-btn" data-manual="pyq2022" aria-label="Start quiz for 2022 30% Main">1. PYQ 30% Main 2022</button>
+      <button class="manual-btn" data-manual="pyq2021" aria-label="Start quiz for 2021 30% Main">2. PYQ 30% Main 2021</button>
+      <button class="manual-btn" data-manual="30pyq2023">3. PYQ 30% Main 2023</button>
     </div>
   </div>
 </div>
