--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
       <div class="quiz-card">10. PYQ 30% Main 2022</div>
       <div class="quiz-card">11. PYQ 30% Main 2021</div>
       <div class="quiz-card">12. PYQ 30% Main 2023</div>
+      <div class="quiz-card">13. PYQ 30% Main 2024</div>
     </div>
     <div class="card">
       <h3>Latest Questions</h3>
