--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
       <div class="quiz-card">11. PYQ 30% Main 2021</div>
       <div class="quiz-card">12. PYQ 30% Main 2023</div>
       <div class="quiz-card">13. PYQ 30% Main 2024</div>
+      <div class="quiz-card">14. PYQ 70% Main 2023</div>
     </div>
     <div class="card">
       <h3>Latest Questions</h3>
