--- a/dashboard.html
+++ b/dashboard.html
@@ -407,6 +407,7 @@
       <button class="manual-btn" data-manual="pyq2021">11. PYQ 30% Main 2021</button>
       <button class="manual-btn" data-manual="30pyq2023">12. PYQ 30% Main 2023</button>
       <button class="manual-btn" data-manual="30pyq2024">13. PYQ 30% Main 2024</button>
+      <button class="manual-btn" data-manual="30pyq2024">14. PYQ 70% Main 2023</button>
     </div>
   </section>
 
