--- a/pyq-quizzes.html
+++ b/pyq-quizzes.html
@@ -236,7 +236,8 @@
       <button class="manual-btn" data-manual="pyq2021" aria-label="Start quiz for 2021 30% Main">2. PYQ 30% Main 2021</button>
       <button class="manual-btn" data-manual="30pyq2023">3. PYQ 30% Main 2023</button>
       <button class="manual-btn" data-manual="30pyq2024">4. PYQ 30% Main 2024</button>
-      <button class="manual-btn" data-manual="30pyq2024">5. PYQ 70% Main 2023</button>
+      <button class="manual-btn" data-manual="70pyq2023">5. PYQ 70% Main 2023</button>
+      <button class="manual-btn" data-manual="70pyq2023sup">14. PYQ 70% Sup 2023</button>
     </div>
   </div>
 </div>
