--- a/dashboard.html
+++ b/dashboard.html
@@ -409,6 +409,7 @@
       <button class="manual-btn" data-manual="30pyq2024">13. PYQ 30% Main 2024</button>
       <button class="manual-btn" data-manual="70pyq2023">14. PYQ 70% Main 2023</button>
       <button class="manual-btn" data-manual="70pyq2023sup">14. PYQ 70% Sup 2023</button>
+      <button class="manual-btn" data-manual="70pyq2024main">14. PYQ 70% Main 2024</button>
     </div>
   </section>
 
